# stellaria-gtk4

./: COPYING  README.md  me.kivutar.Stellaria.json  meson.build
data/: me.kivutar.Stellaria.appdata.xml.in  me.kivutar.Stellaria.desktop.in  me.kivutar.Stellaria.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.c  meson.build  stellaria-application.c  stellaria-application.h  stellaria-window.c  stellaria-window.h  stellaria-window.ui  stellaria.gresource.xml
